Rename to Second to Nonce

--- a/web-application-security/csp-misconfig/templates/index.html
+++ b/web-application-security/csp-misconfig/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Secret Whispers</title>
+        <title>Secret Courier</title>
         <style nonce="{{ nonce }}">
             * {
                 box-sizing: border-box;
@@ -229,7 +229,7 @@
                 </svg>
             </div>
             <header class="whisper-header">
-                <h1>Secret Whispers</h1>
+                <h1>Secret Courier</h1>
                 <p class="subtitle">
                     What happens in the here, stays in the here.
                 </p>
